--- a/style.css
+++ b/style.css
@@ -11,69 +11,6 @@ h1 {
 	font-weight: normal;
 }
 
-.ok {
-	background-color: #0ac40a;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: white;
-	transition-duration: 0.3s;
-}
-
-.ok:hover {
-	background-color: #bbffbb;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: #0ac40a;
-}
-
-.warn {
-	background-color: #f29d15;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: white;
-	transition-duration: 0.3s;
-}
-
-.warn:hover {
-	background-color: #ffe6bf;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: #f29d15;
-	transition-duration: 0.3s;
-}
-
-.err {
-	background-color: #ea1414;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: white;
-	transition-duration: 0.3s;
-}
-
-.err:hover {
-	background-color: #ffcccc;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: #ea1414;
-	transition-duration: 0.3s;
-}
-
-.off {
-	background-color: #7c7c7c;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: white;
-	transition-duration: 0.3s;
-}
-
-.off:hover {
-	background-color: #e6e6e6;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: #7c7c7c;
-	transition-duration: 0.3s;
-}
-
 button {
 	background-color: #0091eb;
 	font-family: "Quicksand";
@@ -81,8 +18,11 @@ button {
 	padding: 2px 10px;
 	border-radius: 100px;
 	color: white;
+	height: 30px;
 	transition-duration: 0.3s;
 	border: none;
+	width: 500px;
+	margin: 10px;
 }
 
 button:hover {
@@ -93,16 +33,25 @@ button:hover {
 	transition-duration: 0.3s;
 }
 
-.left {
-	text-align: right;
+.no {
+	background-color: #767676;
+	font-family: "Quicksand";
+	font-size: 18.72px;
+	padding: 2px 10px;
+	border-radius: 100px;
+	color: white;
+	height: 30px;
+	transition-duration: 0.3s;
+	border: none;
+	margin: 10px;
 }
 
-.right {
-	text-align: left;
-}
-
-table tr td {
-	width: 50vw;
+.no:hover {
+	background-color: #d1d1d1;
+	padding: 2px 10px;
+	border-radius: 100px;
+	color: #767676;
+	transition-duration: 0.3s;
 }
 
 h3 {
@@ -113,98 +62,17 @@ span {
 	font-weight: normal;
 }
 
-.progressContainer {
-	width: 100px;
-	margin-top: 10px;
-	box-sizing: border-box;
-	height: 27.33px;
-	padding: 0;
-	overflow: hidden;
-	text-align: center;
-	border-radius: 100px;
-	border: none;
-	background-color: #d8d8d8;
-}
-
-.progressSD {
-	margin: 0;
-	width: 9%;
-	margin-top: -24.5px;
-	height: 27.33px;
-	border: none;
-	background-color: #0ac40a;
-	transition-duration: 0.3s;
-}
-
-.progressHD {
-	margin: 0;
-	width: 7%;
-	margin-top: -24.5px;
-	height: 27.32px;
-	border: none;
-	background-color: #0ac40a;
-	transition-duration: 0.3s;
-}
-
-.progressContainer .showBefore {
-	font-weight: bold;
-	font-size: 18.72px;
-	transition-duration: 0.3s;
-}
-
-.progressContainer .showAfter {
-	font-weight: bold;
-	font-size: 0px;
-	transition-duration: 0.3s;
-}
-
-.progressContainer:hover .showBefore {
-	font-weight: bold;
-	color: white;
-	font-size: 0px;
-	transition-duration: 0.3s;
-}
-
-.progressContainer:hover .showAfter {
-	font-weight: bold;
-	color: white;
-	font-size: 15px;
-	transition-duration: 0.3s;
-}
-
-.progressContainer:hover .progressSD {
-	width: 100%;
-}
-
-.progressContainer:hover .progressHD {
-	width: 100%;
-}
-
-.detail {
-	background-color: #0091eb;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: white;
-	transition-duration: 0.3s;
-}
-
-.detail:hover {
-	background-color: #b9e4ff;
-	padding: 2px 10px;
-	border-radius: 100px;
-	color: #0091eb;
-	transition-duration: 0.3s;
-}
-
 .detailHover .showBefore {
 	font-weight: normal;
 	font-size: 18.72px;
+	float: left;
 	transition-duration: 0.3s;
 }
 
 .detailHover .showAfter {
-	font-weight: normal;
+	font-weight: bold;
 	font-size: 0px;
+	float: right;
 	transition-duration: 0.3s;
 }
 
@@ -216,8 +84,36 @@ span {
 }
 
 .detailHover:hover .showAfter {
-	font-weight: normal;
+	font-weight: bold;
 	color: #0091eb;
+	font-size: 18.72px;
+	transition-duration: 0.3s;
+}
+
+.noDetailHover .showBefore {
+	font-weight: normal;
+	font-size: 18.72px;
+	float: left;
+	transition-duration: 0.3s;
+}
+
+.noDetailHover .showAfter {
+	font-weight: bold;
+	font-size: 0px;
+	float: right;
+	transition-duration: 0.3s;
+}
+
+.noDetailHover:hover .showBefore {
+	font-weight: normal;
+	color: white;
+	font-size: 0px;
+	transition-duration: 0.3s;
+}
+
+.noDetailHover:hover .showAfter {
+	font-weight: bold;
+	color: #767676;
 	font-size: 18.72px;
 	transition-duration: 0.3s;
 }
